Fixed bag with UTC.